--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,14 +12,14 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-15 Wed 18:36]
+#+CAPTION: Clock summary at [2019-05-15 Wed 18:45]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *65:28* |       |       | 100.0 |
+| *Total time*                                               | *65:36* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 65:28   |       |       | 100.0 |
-| Active                                                     |         | 65:28 |       | 100.0 |
+| Stories                                                    | 65:36   |       |       | 100.0 |
+| Active                                                     |         | 65:36 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  2:41 |   4.1 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   3.3 |
 | Sprint and product backlog grooming                        |         |       |  2:01 |   3.1 |
@@ -27,7 +27,7 @@
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.6 |
 | Create namespaces for model elements                       |         |       |  8:59 |  13.7 |
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   2.4 |
-| Try to add relational tracing support                      |         |       |  2:51 |   4.4 |
+| Try to add relational tracing support                      |         |       |  2:51 |   4.3 |
 | Linux and OSX binaries are not stripped                    |         |       |  1:23 |   2.1 |
 | Fix issues with nightly build and CI                       |         |       |  0:05 |   0.1 |
 | Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  11.0 |
@@ -35,7 +35,7 @@
 | Make a clear separation between dogen and masd             |         |       |  5:17 |   8.1 |
 | Add a method in enumeration that converts it from strings  |         |       |  7:49 |  11.9 |
 | Update the MASD UML profile to reflect the latest changes  |         |       |  0:05 |   0.1 |
-| Mappings as meta-model elements                            |         |       |  5:50 |   8.9 |
+| Mappings as meta-model elements                            |         |       |  5:58 |   9.1 |
 | Emacs maintenance and exploration work                     |         |       |  0:23 |   0.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -655,6 +655,7 @@ down time waiting for builds to sync it.
 
 *** STARTED Mappings as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-05-15 Wed 18:37]--[2019-05-15 Wed 18:45] =>  0:08
     CLOCK: [2019-05-15 Wed 18:13]--[2019-05-15 Wed 18:27] =>  0:14
     CLOCK: [2019-05-15 Wed 18:08]--[2019-05-15 Wed 18:12] =>  0:04
     CLOCK: [2019-05-15 Wed 17:10]--[2019-05-15 Wed 17:56] =>  0:46
