--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,32 +12,32 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-16 Thu 11:51]
+#+CAPTION: Clock summary at [2019-05-16 Thu 14:01]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *67:08* |       |       | 100.0 |
+| *Total time*                                               | *68:01* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 67:08   |       |       | 100.0 |
-| Active                                                     |         | 67:08 |       | 100.0 |
-| Edit release notes for previous sprint                     |         |       |  2:41 |   4.0 |
-| Create a video demo for the previous sprint's features     |         |       |  2:11 |   3.3 |
-| Sprint and product backlog grooming                        |         |       |  2:24 |   3.6 |
+| Stories                                                    | 68:01   |       |       | 100.0 |
+| Active                                                     |         | 68:01 |       | 100.0 |
+| Edit release notes for previous sprint                     |         |       |  2:41 |   3.9 |
+| Create a video demo for the previous sprint's features     |         |       |  2:11 |   3.2 |
+| Sprint and product backlog grooming                        |         |       |  2:24 |   3.5 |
 | Defining profiles directly on a target model does not work |         |       |  0:30 |   0.7 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.5 |
-| Create namespaces for model elements                       |         |       |  8:59 |  13.4 |
+| Create namespaces for model elements                       |         |       |  8:59 |  13.2 |
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   2.3 |
 | Try to add relational tracing support                      |         |       |  2:51 |   4.2 |
-| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   2.1 |
+| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   2.0 |
 | Fix issues with nightly build and CI                       |         |       |  0:05 |   0.1 |
 | Emacs maintenance and exploration work                     |         |       |  0:23 |   0.6 |
-| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  10.7 |
-| Replace JSON based feature templates with generated code   |         |       | 16:15 |  24.2 |
-| Make a clear separation between dogen and masd             |         |       |  5:17 |   7.9 |
-| Add a method in enumeration that converts it from strings  |         |       |  7:49 |  11.6 |
+| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  10.6 |
+| Replace JSON based feature templates with generated code   |         |       | 16:15 |  23.9 |
+| Make a clear separation between dogen and masd             |         |       |  5:17 |   7.8 |
+| Add a method in enumeration that converts it from strings  |         |       |  7:49 |  11.5 |
 | Update palettes and colour script with new elements        |         |       |  1:09 |   1.7 |
 | Update the MASD UML profile to reflect the latest changes  |         |       |  0:05 |   0.1 |
-| Mappings as meta-model elements                            |         |       |  5:58 |   8.9 |
+| Mappings as meta-model elements                            |         |       |  6:51 |  10.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -693,6 +693,7 @@ down time waiting for builds to sync it.
 
 *** STARTED Mappings as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-05-16 Thu 13:07]--[2019-05-16 Thu 14:00] =>  0:53
     CLOCK: [2019-05-15 Wed 18:37]--[2019-05-15 Wed 18:45] =>  0:08
     CLOCK: [2019-05-15 Wed 18:13]--[2019-05-15 Wed 18:27] =>  0:14
     CLOCK: [2019-05-15 Wed 18:08]--[2019-05-15 Wed 18:12] =>  0:04
@@ -810,6 +811,18 @@ chooses the mapping set to use.
 In keeping with the idea that profiles are model-level concepts,
 mappings should be too. We should be able to import mappings in a UML
 diagram and override them or define new ones too.
+
+*** LAM types should exist as a model                                 :story:
+
+At present we use LAM as a conceptual device: we don't even have a LAM
+model. Users create attributes with LAM types and we map them to
+concrete technical spaces such as C++ and C#. However, this means we
+do not even resolve lam types, nor do we tell users what types are
+available. A better approach would be to create a LAM model with types
+and make the mappings properties of the types themselves. these can
+now be placed under the =masd= namespace: =masd::lannguage_agnostic=,
+=masd::la= or maybe =masd::pim=. This should be done when we place
+mappings in the meta-model.
 
 *** Colouring script should be included as part of package            :story:
 
