--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,14 +12,14 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-16 Thu 14:01]
+#+CAPTION: Clock summary at [2019-05-16 Thu 14:06]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *68:01* |       |       | 100.0 |
+| *Total time*                                               | *68:06* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 68:01   |       |       | 100.0 |
-| Active                                                     |         | 68:01 |       | 100.0 |
+| Stories                                                    | 68:06   |       |       | 100.0 |
+| Active                                                     |         | 68:06 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  2:41 |   3.9 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   3.2 |
 | Sprint and product backlog grooming                        |         |       |  2:24 |   3.5 |
@@ -37,7 +37,7 @@
 | Add a method in enumeration that converts it from strings  |         |       |  7:49 |  11.5 |
 | Update palettes and colour script with new elements        |         |       |  1:09 |   1.7 |
 | Update the MASD UML profile to reflect the latest changes  |         |       |  0:05 |   0.1 |
-| Mappings as meta-model elements                            |         |       |  6:51 |  10.1 |
+| Mappings as meta-model elements                            |         |       |  6:56 |  10.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -693,6 +693,7 @@ down time waiting for builds to sync it.
 
 *** STARTED Mappings as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-05-16 Thu 14:01]--[2019-05-16 Thu 14:06] =>  0:05
     CLOCK: [2019-05-16 Thu 13:07]--[2019-05-16 Thu 14:00] =>  0:53
     CLOCK: [2019-05-15 Wed 18:37]--[2019-05-15 Wed 18:45] =>  0:08
     CLOCK: [2019-05-15 Wed 18:13]--[2019-05-15 Wed 18:27] =>  0:14
