--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,32 +12,32 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-16 Thu 17:00]
+#+CAPTION: Clock summary at [2019-05-16 Thu 18:03]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *70:26* |       |       | 100.0 |
+| *Total time*                                               | *71:27* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 70:26   |       |       | 100.0 |
-| Active                                                     |         | 70:26 |       | 100.0 |
+| Stories                                                    | 71:27   |       |       | 100.0 |
+| Active                                                     |         | 71:27 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  2:41 |   3.8 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   3.1 |
 | Sprint and product backlog grooming                        |         |       |  2:24 |   3.4 |
 | Defining profiles directly on a target model does not work |         |       |  0:30 |   0.7 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.5 |
-| Create namespaces for model elements                       |         |       |  8:59 |  12.8 |
+| Create namespaces for model elements                       |         |       |  8:59 |  12.6 |
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   2.2 |
 | Try to add relational tracing support                      |         |       |  2:51 |   4.0 |
-| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   2.0 |
+| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   1.9 |
 | Fix issues with nightly build and CI                       |         |       |  0:05 |   0.1 |
 | Emacs maintenance and exploration work                     |         |       |  0:40 |   0.9 |
-| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  10.2 |
-| Replace JSON based feature templates with generated code   |         |       | 16:15 |  23.1 |
-| Make a clear separation between dogen and masd             |         |       |  5:17 |   7.5 |
-| Add a method in enumeration that converts it from strings  |         |       |  7:49 |  11.1 |
+| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  10.1 |
+| Replace JSON based feature templates with generated code   |         |       | 16:15 |  22.7 |
+| Make a clear separation between dogen and masd             |         |       |  5:17 |   7.4 |
+| Add a method in enumeration that converts it from strings  |         |       |  7:49 |  10.9 |
 | Update palettes and colour script with new elements        |         |       |  1:09 |   1.6 |
 | Update the MASD UML profile to reflect the latest changes  |         |       |  0:05 |   0.1 |
-| Mappings as meta-model elements                            |         |       |  8:59 |  12.8 |
+| Mappings as meta-model elements                            |         |       | 10:00 |  14.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -696,6 +696,7 @@ down time waiting for builds to sync it.
 
 *** STARTED Mappings as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-05-16 Thu 17:01]--[2019-05-16 Thu 18:02] =>  1:01
     CLOCK: [2019-05-16 Thu 15:10]--[2019-05-16 Thu 16:59] =>  1:49
     CLOCK: [2019-05-16 Thu 14:37]--[2019-05-16 Thu 14:51] =>  0:14
     CLOCK: [2019-05-16 Thu 14:01]--[2019-05-16 Thu 14:06] =>  0:05
