--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,20 +12,20 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-16 Thu 18:03]
+#+CAPTION: Clock summary at [2019-05-16 Thu 18:26]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *71:27* |       |       | 100.0 |
+| *Total time*                                               | *71:35* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 71:27   |       |       | 100.0 |
-| Active                                                     |         | 71:27 |       | 100.0 |
-| Edit release notes for previous sprint                     |         |       |  2:41 |   3.8 |
+| Stories                                                    | 71:35   |       |       | 100.0 |
+| Active                                                     |         | 71:35 |       | 100.0 |
+| Edit release notes for previous sprint                     |         |       |  2:41 |   3.7 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   3.1 |
 | Sprint and product backlog grooming                        |         |       |  2:24 |   3.4 |
 | Defining profiles directly on a target model does not work |         |       |  0:30 |   0.7 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.5 |
-| Create namespaces for model elements                       |         |       |  8:59 |  12.6 |
+| Create namespaces for model elements                       |         |       |  8:59 |  12.5 |
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   2.2 |
 | Try to add relational tracing support                      |         |       |  2:51 |   4.0 |
 | Linux and OSX binaries are not stripped                    |         |       |  1:23 |   1.9 |
@@ -37,7 +37,7 @@
 | Add a method in enumeration that converts it from strings  |         |       |  7:49 |  10.9 |
 | Update palettes and colour script with new elements        |         |       |  1:09 |   1.6 |
 | Update the MASD UML profile to reflect the latest changes  |         |       |  0:05 |   0.1 |
-| Mappings as meta-model elements                            |         |       | 10:00 |  14.0 |
+| Mappings as meta-model elements                            |         |       | 10:08 |  14.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -696,6 +696,7 @@ down time waiting for builds to sync it.
 
 *** STARTED Mappings as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-05-16 Thu 18:18]--[2019-05-16 Thu 18:26] =>  0:08
     CLOCK: [2019-05-16 Thu 17:01]--[2019-05-16 Thu 18:02] =>  1:01
     CLOCK: [2019-05-16 Thu 15:10]--[2019-05-16 Thu 16:59] =>  1:49
     CLOCK: [2019-05-16 Thu 14:37]--[2019-05-16 Thu 14:51] =>  0:14
