--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,32 +12,32 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-16 Thu 19:46]
+#+CAPTION: Clock summary at [2019-05-17 Fri 10:02]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *72:25* |       |       | 100.0 |
+| *Total time*                                               | *74:55* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 72:25   |       |       | 100.0 |
-| Active                                                     |         | 72:25 |       | 100.0 |
-| Edit release notes for previous sprint                     |         |       |  2:41 |   3.7 |
-| Create a video demo for the previous sprint's features     |         |       |  2:11 |   3.0 |
-| Sprint and product backlog grooming                        |         |       |  2:24 |   3.3 |
+| Stories                                                    | 74:55   |       |       | 100.0 |
+| Active                                                     |         | 74:55 |       | 100.0 |
+| Edit release notes for previous sprint                     |         |       |  2:41 |   3.6 |
+| Create a video demo for the previous sprint's features     |         |       |  2:11 |   2.9 |
+| Sprint and product backlog grooming                        |         |       |  2:24 |   3.2 |
 | Defining profiles directly on a target model does not work |         |       |  0:30 |   0.7 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.5 |
-| Create namespaces for model elements                       |         |       |  8:59 |  12.4 |
+| Create namespaces for model elements                       |         |       |  8:59 |  12.0 |
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   2.1 |
-| Try to add relational tracing support                      |         |       |  2:51 |   3.9 |
-| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   1.9 |
+| Try to add relational tracing support                      |         |       |  2:51 |   3.8 |
+| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   1.8 |
 | Fix issues with nightly build and CI                       |         |       |  0:05 |   0.1 |
 | Emacs maintenance and exploration work                     |         |       |  0:40 |   0.9 |
-| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  10.0 |
-| Replace JSON based feature templates with generated code   |         |       | 16:15 |  22.4 |
-| Make a clear separation between dogen and masd             |         |       |  5:17 |   7.3 |
-| Add a method in enumeration that converts it from strings  |         |       |  7:49 |  10.8 |
-| Update palettes and colour script with new elements        |         |       |  1:09 |   1.6 |
+| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |   9.6 |
+| Replace JSON based feature templates with generated code   |         |       | 16:15 |  21.7 |
+| Make a clear separation between dogen and masd             |         |       |  5:17 |   7.1 |
+| Add a method in enumeration that converts it from strings  |         |       |  7:49 |  10.4 |
+| Update palettes and colour script with new elements        |         |       |  1:09 |   1.5 |
 | Update the MASD UML profile to reflect the latest changes  |         |       |  0:05 |   0.1 |
-| Mappings as meta-model elements                            |         |       | 10:58 |  15.1 |
+| Mappings as meta-model elements                            |         |       | 13:28 |  18.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -696,6 +696,11 @@ down time waiting for builds to sync it.
 
 *** STARTED Mappings as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-05-17 Fri 09:54]--[2019-05-17 Fri 10:02] =>  0:08
+    CLOCK: [2019-05-17 Fri 08:20]--[2019-05-17 Fri 09:53] =>  1:33
+    CLOCK: [2019-05-17 Fri 08:14]--[2019-05-17 Fri 08:19] =>  0:05
+    CLOCK: [2019-05-16 Thu 22:41]--[2019-05-16 Thu 22:48] =>  0:07
+    CLOCK: [2019-05-16 Thu 22:03]--[2019-05-16 Thu 22:40] =>  0:37
     CLOCK: [2019-05-16 Thu 18:56]--[2019-05-16 Thu 19:46] =>  0:50
     CLOCK: [2019-05-16 Thu 18:18]--[2019-05-16 Thu 18:26] =>  0:08
     CLOCK: [2019-05-16 Thu 17:01]--[2019-05-16 Thu 18:02] =>  1:01
@@ -808,6 +813,13 @@ Notes:
   elements plus (very significantly) the changing of the model TS from
   agnostic into a concrete TS. Without this the merger will just
   ignore the model.
+- mapping happens right before merging. This means that we cannot rely
+  on the mappings being made available to the model currently being
+  mapped as we had assumed. We need to find some way to ensure the
+  mappings are made available to all models. We need to change the
+  assembly, mapping and merge transforms to take in model sets. In the
+  merge transform we need to first locate all the mappings and build
+  the repository, then map all models.
 
 Merged Stories:
 
@@ -838,6 +850,19 @@ and make the mappings properties of the types themselves. these can
 now be placed under the =masd= namespace: =masd::lannguage_agnostic=,
 =masd::la= or maybe =masd::pim=. This should be done when we place
 mappings in the meta-model.
+
+*** Use C# notation in JSON C# models                                 :story:
+
+At present we are generating C++ style types in JSON models (at least
+for LAM):
+
+:   "type": "masd::lam::text::character"
+
+If we change this to
+
+:   "type": "masd.lam.text.character"
+
+We get a parsing error.
 
 *** Colouring script should be included as part of package            :story:
 
